--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+matplotlib==3.5.2
 networkx==2.8.7
-torch==1.10.2
-torchvision==0.11.0a0
+pandas==1.4.4
+Pillow==9.3.0
+torch==1.12.1
+torchvision==0.13.1
